# tgui

./: .agents  .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
src/tgui/: __init__.py  main.py
src/tgui/core/: actions.py  settings.py  state.py
src/tgui/media/: decoder.py
src/tgui/storage/: db.py
src/tgui/telegram/: client.py
src/tgui/ui/: app.py  screens.py  widgets.py
tests/: test_app.py  test_settings.py  test_telegram_service.py
